[package]
name = "archive_raw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
blake3 = { version = "1.5.5", features = ["mmap"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.6"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.26"
pico-args = { version = "0.5.0", features = ["combined-flags"] }
rayon = "1.10.0"
rexiv2 = "0.10.0"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
walkdir = "2.5.0"

[dev-dependencies]
rand = "0.9.0"
itertools = "0.14.0"
